<resources>
    <string name="app_name">AndroidXB</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="title_home">Home</string>
    <string name="title_projects">Projects</string>
    <string name="title_socials">Socials</string>
    <string name="title_contact">Contact</string>

    <string name="about_john">Hi, I am John Doe, pursuing my B.Tech in Information Technology at VNR VJIET College. I have a strong foundation in web development, working extensively with technologies like HTML, CSS, JavaScript, and frameworks such as React and Node.js. I have experience building full-stack applications using the MERN stack. Additionally, I have hands-on expertise in Android app development, leveraging Java and Kotlin. I am also familiar with cloud platforms like AWS and have dabbled in machine learning, implementing models for data analysis and entity extraction. I constantly strive to expand my skill set and explore new technologies.</string>
    <string name="john_skills_web">
       &#8226; Web Development: Proficient in HTML, CSS, JavaScript, and frameworks like React and Node.js.

    </string>
    <string name="john_skills_and">
        &#8226; Android Development: Experienced in building mobile applications using Java and Kotlin.
    </string>
    <string name="john_skills_ml">
        &#8226; Machine Learning: Knowledgeable in implementing machine learning models for data analysis and entity extraction.
    </string>
    <string name="john_certificates_1">
       &#8226; Certification in MERN stack development course.

    </string>
    <string name="john_certificates_2">
        &#8226; Certification in Machine Learning course by Andrew NG
    </string>
    <string name="john_certificates_3">
        &#8226; Certification in Android App development course
    </string>
    <string name="john_achievements_1">
       &#8226; This is the achievement-1

    </string>
    <string name="john_achievements_2">
        &#8226; This is the achievement-2
    </string>
    <string name="john_achievements_3">
        &#8226; This is the achievement-3
    </string>
</resources>